# simple_tankgame

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
extern-module/LearnOpenGL/includes/learnopengl/: camera.h  model.h
extern-module/LearnOpenGL/src/: model.cpp
extern-module/glad/include/glad/: glad.h
extern-module/glad/src/: glad.c
include/tankgame/: controller.hpp  display.hpp  model.hpp  utils.hpp
resource/model/bullet/: grass_bullet.mtl
resource/model/grass/: grass.mtl  grass_cube.mtl
resource/model/tank/: bottom.mtl  up.mtl
resource/shader/: particle_f.glsl  shadow_mapping_f.glsl
src/: controller.cpp  display.cpp  model.cpp  utils.cpp
tests/: CMakeLists.txt  empty_window.cpp  two_triangles.cpp
